adds ServerFacade tests, fixes list games method